--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@romavuh</a
 <button class="btn" id="btnEnviarMsg">Enviar</button>
 </div>
 
-<button class="btn hidden" id="btnTransferirDono">Transferir Dono</button>
+<button class="btn hidden" id="btnTransferirDono" onclick="mostrarListaParticipantes()">Transferir Dono</button>
 
 <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
 
