--- a/index.html
+++ b/index.html
@@ -1,209 +1,206 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎥 PRIVE</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Assistir Junto Privado PRO</title>
 
-  <style>
-    *{box-sizing:border-box;}
-    body{
-      margin:0;
-      font-family:Arial, Helvetica, sans-serif;
-      background:#0f0f0f;
-      color:white;
-      display:flex;
-      justify-content:center;
-    }
-    .hidden{display:none;}
-    .card{
-      width:95%;
-      max-width:700px;
-      margin:40px auto;
-      background:#181818;
-      padding:25px;
-      border-radius:16px;
-      box-shadow:0 0 25px rgba(0,0,0,0.6);
-    }
-    h1{text-align:center;margin-bottom:10px;font-size:22px;}
-    .online{text-align:center;font-size:14px;margin-bottom:5px;color:#bbb;}
-    .global-online{text-align:center;font-size:13px;margin-bottom:15px;color:#00ff88;}
-    .creator{
-      margin-top:20px;
-      font-size:12px;
-      color:#888;
-      text-align:center;
-    }
-    .creator a{color:#e50914;text-decoration:none;}
-    input, select{
-      width:100%;
-      padding:14px;
-      border:none;
-      border-radius:10px;
-      background:#2a2a2a;
-      color:white;
-      font-size:14px;
-      margin-bottom:12px;
-    }
-    .btn{
-      width:100%;
-      padding:14px;
-      background:#e50914;
-      color:white;
-      border:none;
-      border-radius:10px;
-      font-size:14px;
-      cursor:pointer;
-      margin-bottom:12px;
-    }
-    .btn-secondary{background:#333;}
-    .video-box{
-      width:100%;
-      background:#d9d9d9;
-      border-radius:12px;
-      overflow:hidden;
-      position:relative;
-      margin-bottom:20px;
-    }
-    .video-wrapper{
-      position:relative;
-      width:100%;
-      padding-top:56.25%;
-    }
-    .video-wrapper iframe,
-    .video-wrapper video{
-      position:absolute;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-      border:none;
-      object-fit:cover;
-    }
-    .chat{
-      background:#111;
-      border-radius:12px;
-      padding:15px;
-      max-height:280px;
-      display:flex;
-      flex-direction:column;
-      margin-bottom:15px;
-    }
-    #chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
-    .msg{
-      background:#222;
-      padding:8px 12px;
-      border-radius:8px;
-      margin-bottom:8px;
-      font-size:13px;
-      word-break:break-word;
-    }
-    .msg strong{color:#e50914;}
-    #chatBox .msg img {
-      max-width:100%;
-      max-height:200px;
-      border-radius: 8px;
-      margin-top: 5px;
-    }
-    .btn-sair{
-      width:100%;
-      padding:12px;
-      background:#444;
-      color:white;
-      border:none;
-      border-radius:10px;
-      font-size:14px;
-      cursor:pointer;
-    }
-    .login, .home{
-      width:95%;
-      max-width:500px;
-      margin:100px auto;
-      background:#181818;
-      padding:30px;
-      border-radius:16px;
-      text-align:center;
-    }
-    .home p{
-      font-size:14px;
-      color:#ccc;
-      margin-bottom:15px;
-      line-height:1.6;
-    }
-  </style>
+<style>
+*{box-sizing:border-box;}
+body{
+margin:0;
+font-family:Arial, Helvetica, sans-serif;
+background:#0f0f0f;
+color:white;
+display:flex;
+justify-content:center;
+}
+.hidden{display:none;}
+.card{
+width:95%;
+max-width:700px;
+margin:40px auto;
+background:#181818;
+padding:25px;
+border-radius:16px;
+box-shadow:0 0 25px rgba(0,0,0,0.6);
+}
+h1{text-align:center;margin-bottom:10px;font-size:22px;}
+.online{text-align:center;font-size:14px;margin-bottom:5px;color:#bbb;}
+.global-online{text-align:center;font-size:13px;margin-bottom:15px;color:#00ff88;}
+.creator{
+margin-top:20px;
+font-size:12px;
+color:#888;
+text-align:center;
+}
+.creator a{color:#e50914;text-decoration:none;}
+input, select{
+width:100%;
+padding:14px;
+border:none;
+border-radius:10px;
+background:#2a2a2a;
+color:white;
+font-size:14px;
+margin-bottom:12px;
+}
+.btn{
+width:100%;
+padding:14px;
+background:#e50914;
+color:white;
+border:none;
+border-radius:10px;
+font-size:14px;
+cursor:pointer;
+margin-bottom:12px;
+}
+.btn-secondary{background:#333;}
+.video-box{
+width:100%;
+background:#d9d9d9;
+border-radius:12px;
+overflow:hidden;
+position:relative;
+margin-bottom:20px;
+}
+.video-wrapper{
+position:relative;
+width:100%;
+padding-top:56.25%;
+}
+.video-wrapper iframe,
+.video-wrapper video{
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+border:none;
+object-fit:cover;
+}
+.chat{
+background:#111;
+border-radius:12px;
+padding:15px;
+max-height:280px;
+display:flex;
+flex-direction:column;
+margin-bottom:15px;
+}
+#chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
+.msg{
+background:#222;
+padding:8px 12px;
+border-radius:8px;
+margin-bottom:8px;
+font-size:13px;
+word-break:break-word;
+}
+.msg strong{color:#e50914;}
+.btn-sair{
+width:100%;
+padding:12px;
+background:#444;
+color:white;
+border:none;
+border-radius:10px;
+font-size:14px;
+cursor:pointer;
+}
+.login, .home{
+width:95%;
+max-width:500px;
+margin:100px auto;
+background:#181818;
+padding:30px;
+border-radius:16px;
+text-align:center;
+}
+.home p{
+font-size:14px;
+color:#ccc;
+margin-bottom:15px;
+line-height:1.6;
+}
+</style>
 </head>
 <body>
 
 <!-- HOME -->
 <div class="home" id="homeBox">
-  <h2>🎥 PRIVE</h2>
+<h2>🎬 Assistir Junto Privado PRO</h2>
 
-  <p><strong>Seja Bem-Vindo!</strong></p>
-  <p>
-    Estamos felizes em ter você aqui!<br>
-    Agora, você pode criar ou entrar em salas exclusivas, assistir vídeos com seus amigos e conversar em tempo real.<br>
-    Vamos começar!
-  </p>
+<p><strong>Como funciona?</strong></p>
+<p>
+🔐 Você cria ou entra em uma sala usando uma senha.<br>
+🎥 Pode enviar link do YouTube ou vídeo .mp4.<br>
+📁 Pode enviar vídeo da galeria.<br>
+💬 Conversa em tempo real.<br>
+👥 Só entra quem souber a senha.
+</p>
 
-  <button class="btn" onclick="abrirLogin()">Entrar</button>
-  <div class="global-online" id="totalOnlineGlobal">Usuários no site: 66</div>
+<button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
+<div class="global-online" id="totalOnlineGlobal">Usuários no site: 0</div>
 
-  <div class="creator">
-    Criador: <strong>Isac Santos</strong><br>
-    Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@romavuh</a>
-  </div>
+<div class="creator">
+Criador: <strong>Isac Santos</strong><br>
+Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
+</div>
 </div>
 
 <!-- LOGIN -->
 <div class="login hidden" id="loginBox">
-  <h2>Registrar</h2>
-  <input type="text" id="nomeUsuario" placeholder="Seu nome">
-  <input type="password" id="senhaSala" placeholder="Senha da sala">
-  <button class="btn" id="btnEntrar">Entrar</button>
-  <button class="btn btn-secondary" onclick="voltarHome()">Voltar</button>
+<h2>🔐 Entrar na Sala</h2>
+<input type="text" id="nomeUsuario" placeholder="Seu nome">
+<input type="password" id="senhaSala" placeholder="Senha da sala">
+<button class="btn" id="btnEntrar">Entrar</button>
+<button class="btn btn-secondary" onclick="voltarHome()">Voltar</button>
 </div>
 
 <!-- SALA -->
 <div class="card hidden" id="salaBox">
-  <h1>🎥 Sala Privada</h1>
-  <div class="online" id="onlineInfo">Online na sala: 0</div>
-  <div class="global-online" id="globalSala">Usuários no site: 66</div>
+<h1>🎬 Sala Privada</h1>
+<div class="online" id="onlineInfo">Online na sala: 0</div>
+<div class="global-online" id="globalSala">Usuários no site: 0</div>
 
-  <input type="text" id="linkInput" placeholder="Link YouTube ou .mp4">
-  <button class="btn" id="btnEnviarVideo" disabled>Enviar Vídeo</button>
+<input type="text" id="linkInput" placeholder="Link YouTube ou .mp4">
+<button class="btn" id="btnEnviarVideo">Enviar Vídeo</button>
+<input type="file" id="videoFile" accept="video/*">
 
-  <div class="video-box">
-    <div class="video-wrapper" id="videoArea"></div>
-  </div>
+<select id="selectNovoDono" class="hidden"></select>
+<button class="btn btn-secondary hidden" id="btnTransferirDono">👑 Transferir Dono</button>
 
-  <h3>Bate-Papo</h3>
-  <div class="chat">
-    <div id="chatBox"></div>
-    <input type="text" id="chatInput" placeholder="Mensagem">
-    <button class="btn" id="btnEnviarMsg">Enviar</button>
-    <!-- Botão Transferir abaixo do botão de Enviar -->
-    <button class="btn" id="btnTransferir" style="display:none;">Transferir Dono</button>
-  </div>
+<div class="video-box">
+<div class="video-wrapper" id="videoArea"></div>
+</div>
 
-  <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
+<h3>Bate-Papo</h3>
+<div class="chat">
+<div id="chatBox"></div>
+<input type="text" id="chatInput" placeholder="Mensagem">
+<button class="btn" id="btnEnviarMsg">Enviar</button>
+</div>
 
-  <div class="creator">
-    Criador: <strong>Isac Santos</strong> |
-    Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
-  </div>
+<button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
 
+<div class="creator">
+Criador: <strong>Isac Santos</strong> |
+Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
+</div>
 </div>
 
 <audio id="notifSound">
-  <source src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg">
+<source src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg">
 </audio>
 
 <script type="module">
-// Importando as funções do Firebase
+// Importação do Firebase com a nova configuração do PrivéFlix
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, arrayUnion, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, deleteDoc, arrayUnion, arrayRemove, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-// Configuração do Firebase
+// Nova configuração do Firebase para PrivéFlix
 const firebaseConfig = {
   apiKey: "AIzaSyAvGr4AMVDLtTu0OVy9wZB2t5Qt3DTBDQ8",
   authDomain: "priveflix.firebaseapp.com",
@@ -214,7 +211,7 @@ const firebaseConfig = {
   measurementId: "G-W1C74TT6W2"
 };
 
-// Inicializando Firebase
+// Inicializar Firebase
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
@@ -224,50 +221,46 @@ let donoSala = "";
 let ultimoVideo = "";
 let ultimoChat = 0;
 
-window.abrirLogin = () => { homeBox.classList.add("hidden"); loginBox.classList.remove("hidden"); }
-window.voltarHome = () => { loginBox.classList.add("hidden"); homeBox.classList.remove("hidden"); }
+window.abrirLogin = () => {homeBox.classList.add("hidden"); loginBox.classList.remove("hidden");}
+window.voltarHome = () => {loginBox.classList.add("hidden"); homeBox.classList.remove("hidden");}
 
 const globalRef = doc(db, "site", "online");
 
-async function entrarSite() {
+async function entrarSite(){
   let snap = await getDoc(globalRef);
-  if (!snap.exists()) await setDoc(globalRef, { total: 66 }); // Usuários no site inicializados como 66
-  await updateDoc(globalRef, { total: increment(1) });
+  if(!snap.exists()) await setDoc(globalRef, {total: 0});
+  await updateDoc(globalRef, {total: increment(1)});
 }
-
-async function sairSite() { await updateDoc(globalRef, { total: increment(-1) }); }
-
+async function sairSite(){ await updateDoc(globalRef, {total: increment(-1)}); }
 entrarSite();
 
-// Atualização do número de usuários online
 onSnapshot(globalRef, (snap) => {
   let d = snap.data();
-  if (d) {
+  if(d){
     totalOnlineGlobal.innerText = "Usuários no site: " + d.total;
-    if (globalSala) globalSala.innerText = "Usuários no site: " + d.total;
+    if(globalSala) globalSala.innerText = "Usuários no site: " + d.total;
   }
 });
 
-// Ações de entrada, saída, e atualização das salas
 btnEntrar.onclick = async () => {
   let senha = senhaSala.value.trim();
   let nome = nomeUsuario.value.trim();
-  if (!senha || !nome) { alert("Preencha tudo"); return; }
+  if(!senha || !nome){ alert("Preencha tudo"); return; }
 
   nomeLocal = nome;
   salaRef = doc(db, "salas", senha);
 
   let snap = await getDoc(salaRef);
-  if (!snap.exists()) {
-    await setDoc(salaRef, { video: "", chat: [], online: [], dono: nomeLocal });
+  if(!snap.exists()){
+    await setDoc(salaRef, {video: "", chat: [], online: [], dono: nomeLocal});
     donoSala = nomeLocal;
-  } else {
+  }else{
     donoSala = snap.data().dono;
   }
 
   await updateDoc(salaRef, {
     online: arrayUnion(nomeLocal),
-    chat: arrayUnion({ nome: "Sistema", msg: nomeLocal + " entrou na sala" })
+    chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " entrou na sala"})
   });
 
   loginBox.classList.add("hidden");
@@ -275,66 +268,133 @@ btnEntrar.onclick = async () => {
 
   onSnapshot(salaRef, (docSnap) => {
     let dados = docSnap.data();
-    if (!dados) return;
+    if(!dados) return;
 
     donoSala = dados.dono;
 
-    // Mostrar o botão de transferir apenas para o dono da sala
-    if (nomeLocal === donoSala) {
-      btnTransferir.style.display = "block";
+    selectNovoDono.innerHTML = "";
+    if(dados.online){
+      dados.online.forEach(user => {
+        if(user !== nomeLocal){
+          let opt = document.createElement("option");
+          opt.value = user;
+          opt.textContent = user;
+          selectNovoDono.appendChild(opt);
+        }
+      });
     }
 
-    if (dados.video && dados.video !== ultimoVideo) {
+    if(nomeLocal === donoSala && dados.online.length > 1){
+      selectNovoDono.classList.remove("hidden");
+      btnTransferirDono.classList.remove("hidden");
+    } else {
+      selectNovoDono.classList.add("hidden");
+      btnTransferirDono.classList.add("hidden");
+    }
+
+    if(dados.video && dados.video !== ultimoVideo){
       ultimoVideo = dados.video;
       carregarVideo(dados.video);
     }
 
-    if (dados.chat && dados.chat.length !== ultimoChat) {
+    if(dados.chat && dados.chat.length !== ultimoChat){
       ultimoChat = dados.chat.length;
       mostrarChat(dados.chat);
     }
 
     onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
+
+    if(nomeLocal !== donoSala){
+      btnEnviarVideo.disabled = true;
+      videoFile.disabled = true;
+    } else {
+      btnEnviarVideo.disabled = false;
+      videoFile.disabled = false;
+    }
   });
 };
 
-// Evento para o botão de Transferir
-btnTransferir.onclick = async () => {
-  if (nomeLocal !== donoSala) {
-    alert("Somente o dono pode transferir a sala");
-    return;
-  }
-
-  // Exibe a lista de usuários online para o dono escolher
-  let onlineUsuarios = salaRef.data().online;
-  let usuariosList = onlineUsuarios.filter(usuario => usuario !== nomeLocal);
-
-  // Cria uma lista de usuários com números para o dono escolher
-  let listaUsuarios = usuariosList.map((usuario, index) => `${index + 1}. ${usuario}`).join("\n");
-  let escolha = prompt(`Escolha o novo dono da sala:\n\n${listaUsuarios}`);
-  
-  let escolhidoIndex = parseInt(escolha) - 1;
-  if (isNaN(escolhidoIndex) || escolhidoIndex < 0 || escolhidoIndex >= usuariosList.length) {
-    alert("Escolha inválida");
-    return;
-  }
-
-  let novoDono = usuariosList[escolhidoIndex];
-
-  await updateDoc(salaRef, { dono: novoDono });
-
-  donoSala = novoDono;
-  alert(`Dono da sala transferido para ${novoDono}`);
+btnTransferirDono.onclick = async () => {
+  let novo = selectNovoDono.value;
+  if(!novo) return;
+  await updateDoc(salaRef, {
+    dono: novo,
+    chat: arrayUnion({nome: "Sistema", msg: "👑 " + novo + " agora é o novo dono da sala"})
+  });
 };
 
-// Função para carregar o vídeo
-function carregarVideo(link) {
+async function sairSala(){
+  if(!salaRef){ location.reload(); return; }
+
+  let snap = await getDoc(salaRef);
+  let dados = snap.data();
+
+  await updateDoc(salaRef, {
+    online: arrayRemove(nomeLocal),
+    chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " saiu da sala"})
+  });
+
+  let novoSnap = await getDoc(salaRef);
+  let novoDados = novoSnap.data();
+
+  if(novoDados.online.length === 0){
+    await deleteDoc(salaRef);
+  } else if(dados.dono === nomeLocal){
+    let novoDono = novoDados.online[0];
+    await updateDoc(salaRef, {
+      dono: novoDono,
+      chat: arrayUnion({nome: "Sistema", msg: "👑 " + novoDono + " agora é o novo dono da sala"})
+    });
+  }
+
+  await sairSite();
+  location.reload();
+}
+
+btnEnviarMsg.onclick = async () => {
+  let texto = chatInput.value.trim();
+  if(!texto) return;
+  await updateDoc(salaRef, {chat: arrayUnion({nome: nomeLocal, msg: texto})});
+  chatInput.value = "";
+};
+
+function mostrarChat(lista){
+  chatBox.innerHTML = "";
+  lista.forEach(item => {
+    let div = document.createElement("div");
+    div.className = "msg";
+    let nomeExibido = item.nome === donoSala ? "👑 " + item.nome : item.nome;
+    div.innerHTML = "<strong>" + nomeExibido + ":</strong> " + item.msg;
+    chatBox.appendChild(div);
+  });
+  chatBox.scrollTop = chatBox.scrollHeight;
+  notifSound.currentTime = 0;
+  notifSound.play();
+}
+
+btnEnviarVideo.onclick = async () => {
+  if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
+  let link = linkInput.value.trim();
+  if(!link) return;
+  await updateDoc(salaRef, {video: link});
+  linkInput.value = "";
+};
+
+videoFile.onchange = async (e) => {
+  if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
+  const file = e.target.files[0];
+  if(!file) return;
+  const url = URL.createObjectURL(file);
+  await updateDoc(salaRef, {video: url});
+};
+
+function carregarVideo(link){
   videoArea.innerHTML = "";
-  if (link.includes("youtu")) {
+  if(link.includes("youtu")){
     let id = "";
-    if (link.includes("watch?v=")) {
+    if(link.includes("watch?v=")){
       id = link.split("watch?v=")[1].split("&")[0];
-    } else {
+    }else{
       id = link.split("youtu.be/")[1].split("?")[0];
     }
     let iframe = document.createElement("iframe");
@@ -348,35 +408,6 @@ function carregarVideo(link) {
     video.autoplay = true;
     videoArea.appendChild(video);
   }
-}
-
-// Enviar mensagem no chat
-btnEnviarMsg.onclick = async () => {
-  let texto = chatInput.value.trim();
-  if (!texto) return;
-
-  const chatMsg = { nome: nomeLocal, msg: texto };
-  
-  await updateDoc(salaRef, { chat: arrayUnion(chatMsg) });
-  chatInput.value = "";
-};
-
-// Mostrar chat
-function mostrarChat(lista) {
-  chatBox.innerHTML = "";
-  lista.forEach(item => {
-    let div = document.createElement("div");
-    div.className = "msg";
-    let nomeExibido = item.nome === donoSala ? "👑 " + item.nome : item.nome;
-    div.innerHTML = "<strong>" + nomeExibido + ":</strong> " + item.msg;
-
-    chatBox.appendChild(div);
-  });
-  chatBox.scrollTop = chatBox.scrollHeight;
-
-  // Tocar som de notificação
-  notifSound.currentTime = 0;
-  notifSound.play();
 }
 </script>
 
