--- a/index.html
+++ b/index.html
@@ -3,39 +3,117 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Assistir Junto Privado PRO</title>
+<title>LOVEZIN</title>
 
 <style>
 *{box-sizing:border-box;}
+
 body{
 margin:0;
 font-family:Arial, Helvetica, sans-serif;
-background:#0f0f0f;
+background:linear-gradient(180deg,#0f0f0f,#000);
 color:white;
 display:flex;
 justify-content:center;
+align-items:center;
+min-height:100vh;
 }
-.hidden{display:none;}
-.card{
+
+/* ===== ANIMAÇÃO ===== */
+@keyframes fadeInUp{
+0%{opacity:0; transform:translateY(40px);}
+100%{opacity:1; transform:translateY(0);}
+}
+
+@keyframes pulseTitle{
+0%{transform:scale(1);}
+50%{transform:scale(1.05);}
+100%{transform:scale(1);}
+}
+
+/* ===== HOME ESTILO NOVO ===== */
+.home{
 width:95%;
-max-width:700px;
-margin:40px auto;
+max-width:500px;
+background:#111;
+padding:35px 25px;
+border-radius:20px;
+text-align:center;
+box-shadow:0 0 40px rgba(0,0,0,0.7);
+animation:fadeInUp 1s ease;
+}
+
+.logo{
+font-size:40px;
+font-weight:bold;
+color:#ff0000;
+margin-bottom:15px;
+animation:pulseTitle 2s infinite;
+}
+
+.sub{
+color:#00ff88;
+font-size:20px;
+margin-bottom:20px;
+font-weight:bold;
+}
+
+.home p{
+font-size:15px;
+color:#ccc;
+line-height:1.6;
+margin-bottom:25px;
+}
+
+.btn{
+width:100%;
+padding:16px;
+background:#ff0000;
+color:white;
+border:none;
+border-radius:15px;
+font-size:16px;
+cursor:pointer;
+margin-bottom:20px;
+transition:0.3s;
+}
+
+.btn:hover{
+background:#cc0000;
+transform:scale(1.03);
+}
+
+.global-online{
+color:#00ff88;
+font-size:15px;
+margin-top:10px;
+}
+
+.creator{
+margin-top:25px;
+font-size:12px;
+color:#888;
+}
+
+.creator a{
+color:#ff0000;
+text-decoration:none;
+}
+
+/* ===== LOGIN E SALA ===== */
+.hidden{display:none;}
+
+.login, .card{
+width:95%;
+max-width:600px;
 background:#181818;
 padding:25px;
 border-radius:16px;
+text-align:center;
 box-shadow:0 0 25px rgba(0,0,0,0.6);
 }
-h1{text-align:center;margin-bottom:10px;font-size:22px;}
-.online{text-align:center;font-size:14px;margin-bottom:5px;color:#bbb;}
-.global-online{text-align:center;font-size:13px;margin-bottom:15px;color:#00ff88;}
-.creator{
-margin-top:20px;
-font-size:12px;
-color:#888;
-text-align:center;
-}
-.creator a{color:#e50914;text-decoration:none;}
-input, select{
+
+input{
 width:100%;
 padding:14px;
 border:none;
@@ -45,18 +123,11 @@ color:white;
 font-size:14px;
 margin-bottom:12px;
 }
-.btn{
-width:100%;
-padding:14px;
-background:#e50914;
-color:white;
-border:none;
-border-radius:10px;
-font-size:14px;
-cursor:pointer;
-margin-bottom:12px;
+
+.btn-secondary{
+background:#333;
 }
-.btn-secondary{background:#333;}
+
 .video-box{
 width:100%;
 background:#d9d9d9;
@@ -65,11 +136,13 @@ overflow:hidden;
 position:relative;
 margin-bottom:20px;
 }
+
 .video-wrapper{
 position:relative;
 width:100%;
 padding-top:56.25%;
 }
+
 .video-wrapper iframe,
 .video-wrapper video{
 position:absolute;
@@ -80,6 +153,7 @@ height:100%;
 border:none;
 object-fit:cover;
 }
+
 .chat{
 background:#111;
 border-radius:12px;
@@ -89,7 +163,9 @@ display:flex;
 flex-direction:column;
 margin-bottom:15px;
 }
+
 #chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
+
 .msg{
 background:#222;
 padding:8px 12px;
@@ -98,7 +174,9 @@ margin-bottom:8px;
 font-size:13px;
 word-break:break-word;
 }
+
 .msg strong{color:#e50914;}
+
 .btn-sair{
 width:100%;
 padding:12px;
@@ -109,45 +187,35 @@ border-radius:10px;
 font-size:14px;
 cursor:pointer;
 }
-.login, .home{
-width:95%;
-max-width:500px;
-margin:100px auto;
-background:#181818;
-padding:30px;
-border-radius:16px;
-text-align:center;
-}
-.home p{
-font-size:14px;
-color:#ccc;
-margin-bottom:15px;
-line-height:1.6;
-}
+
 </style>
 </head>
 <body>
 
 <!-- HOME -->
 <div class="home" id="homeBox">
-<h2>🎬 Assistir Junto Privado PRO</h2>
 
-<p><strong>Como funciona?</strong></p>
+<div class="logo">LOVEZIN</div>
+
+<div class="sub">Como funciona?</div>
+
 <p>
-🔐 Você cria ou entra em uma sala usando uma senha.<br>
-🎥 Pode enviar link do YouTube ou vídeo .mp4.<br>
-📁 Pode enviar vídeo da galeria.<br>
-💬 Conversa em tempo real.<br>
-👥 Só entra quem souber a senha.
+🎬 Entre em um mundo de vídeos privados juntos!💞<br><br>
+🔐 Crie ou entre em uma sala usando uma senha.<br>
+Só quem souber entra!
 </p>
 
 <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
-<div class="global-online" id="totalOnlineGlobal">Usuários no site: 0</div>
+
+<div class="global-online" id="totalOnlineGlobal">
+Usuários no site: 0
+</div>
 
 <div class="creator">
 Criador: <strong>Isac Santos</strong><br>
-Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
+Instagram: <a href="https://instagram.com/lovezin.vuh" target="_blank">@lovezin.vuh</a>
 </div>
+
 </div>
 
 <!-- LOGIN -->
@@ -163,14 +231,9 @@ Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh<
 <div class="card hidden" id="salaBox">
 <h1>🎬 Sala Privada</h1>
 <div class="online" id="onlineInfo">Online na sala: 0</div>
-<div class="global-online" id="globalSala">Usuários no site: 0</div>
 
 <input type="text" id="linkInput" placeholder="Link YouTube ou .mp4">
 <button class="btn" id="btnEnviarVideo">Enviar Vídeo</button>
-<input type="file" id="videoFile" accept="video/*">
-
-<select id="selectNovoDono" class="hidden"></select>
-<button class="btn btn-secondary hidden" id="btnTransferirDono">👑 Transferir Dono</button>
 
 <div class="video-box">
 <div class="video-wrapper" id="videoArea"></div>
@@ -272,29 +335,12 @@ btnEntrar.onclick = async () => {
 
     donoSala = dados.dono;
 
-    selectNovoDono.innerHTML = "";
-    if(dados.online){
-      dados.online.forEach(user => {
-        if(user !== nomeLocal){
-          let opt = document.createElement("option");
-          opt.value = user;
-          opt.textContent = user;
-          selectNovoDono.appendChild(opt);
-        }
-      });
-    }
+    onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
 
-    if(nomeLocal === donoSala && dados.online.length > 1){
-      selectNovoDono.classList.remove("hidden");
-      btnTransferirDono.classList.remove("hidden");
+    if(nomeLocal !== donoSala){
+      btnEnviarVideo.disabled = true;
     } else {
-      selectNovoDono.classList.add("hidden");
-      btnTransferirDono.classList.add("hidden");
-    }
-
-    if(dados.video && dados.video !== ultimoVideo){
-      ultimoVideo = dados.video;
-      carregarVideo(dados.video);
+      btnEnviarVideo.disabled = false;
     }
 
     if(dados.chat && dados.chat.length !== ultimoChat){
@@ -302,25 +348,26 @@ btnEntrar.onclick = async () => {
       mostrarChat(dados.chat);
     }
 
-    onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
-
-    if(nomeLocal !== donoSala){
-      btnEnviarVideo.disabled = true;
-      videoFile.disabled = true;
-    } else {
-      btnEnviarVideo.disabled = false;
-      videoFile.disabled = false;
+    if(dados.video && dados.video !== ultimoVideo){
+      ultimoVideo = dados.video;
+      carregarVideo(dados.video);
     }
   });
 };
 
-btnTransferirDono.onclick = async () => {
-  let novo = selectNovoDono.value;
-  if(!novo) return;
-  await updateDoc(salaRef, {
-    dono: novo,
-    chat: arrayUnion({nome: "Sistema", msg: "👑 " + novo + " agora é o novo dono da sala"})
-  });
+btnEnviarMsg.onclick = async () => {
+  let texto = chatInput.value.trim();
+  if(!texto) return;
+  await updateDoc(salaRef, {chat: arrayUnion({nome: nomeLocal, msg: texto})});
+  chatInput.value = "";
+};
+
+btnEnviarVideo.onclick = async () => {
+  if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
+  let link = linkInput.value.trim();
+  if(!link) return;
+  await updateDoc(salaRef, {video: link});
+  linkInput.value = "";
 };
 
 async function sairSala(){
@@ -334,29 +381,9 @@ async function sairSala(){
     chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " saiu da sala"})
   });
 
-  let novoSnap = await getDoc(salaRef);
-  let novoDados = novoSnap.data();
-
-  if(novoDados.online.length === 0){
-    await deleteDoc(salaRef);
-  } else if(dados.dono === nomeLocal){
-    let novoDono = novoDados.online[0];
-    await updateDoc(salaRef, {
-      dono: novoDono,
-      chat: arrayUnion({nome: "Sistema", msg: "👑 " + novoDono + " agora é o novo dono da sala"})
-    });
-  }
-
   await sairSite();
   location.reload();
 }
-
-btnEnviarMsg.onclick = async () => {
-  let texto = chatInput.value.trim();
-  if(!texto) return;
-  await updateDoc(salaRef, {chat: arrayUnion({nome: nomeLocal, msg: texto})});
-  chatInput.value = "";
-};
 
 function mostrarChat(lista){
   chatBox.innerHTML = "";
@@ -371,22 +398,6 @@ function mostrarChat(lista){
   notifSound.currentTime = 0;
   notifSound.play();
 }
-
-btnEnviarVideo.onclick = async () => {
-  if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
-  let link = linkInput.value.trim();
-  if(!link) return;
-  await updateDoc(salaRef, {video: link});
-  linkInput.value = "";
-};
-
-videoFile.onchange = async (e) => {
-  if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
-  const file = e.target.files[0];
-  if(!file) return;
-  const url = URL.createObjectURL(file);
-  await updateDoc(salaRef, {video: url});
-};
 
 function carregarVideo(link){
   videoArea.innerHTML = "";
