--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Instagram: <a href="https://instagram.com/lovezin.vuh" target="_blank">@lovezin.
 <div class="video-wrapper" id="videoArea"></div>
 </div>
 
-<h3>Bate-Papo</h3>
+<h3>Chat</h3>
 <div class="chat">
 <div id="chatBox"></div>
 <input type="text" id="chatInput" placeholder="Mensagem">
