--- a/index.html
+++ b/index.html
@@ -9,183 +9,199 @@
 *{box-sizing:border-box;}
 
 body{
-margin:0;
-font-family:Arial, Helvetica, sans-serif;
-background:linear-gradient(180deg,#0f0f0f,#000);
-color:white;
-display:flex;
-justify-content:center;
-align-items:center;
-min-height:100vh;
+  margin:0;
+  font-family:Arial, Helvetica, sans-serif;
+  background:linear-gradient(180deg,#0f0f0f,#000);
+  color:white;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:100vh;
 }
 
 /* ===== ANIMAÇÃO ===== */
 @keyframes fadeInUp{
-0%{opacity:0; transform:translateY(40px);}
-100%{opacity:1; transform:translateY(0);}
+  0%{opacity:0; transform:translateY(40px);}
+  100%{opacity:1; transform:translateY(0);}
 }
 
 @keyframes pulseTitle{
-0%{transform:scale(1);}
-50%{transform:scale(1.05);}
-100%{transform:scale(1);}
+  0%{transform:scale(1);}
+  50%{transform:scale(1.05);}
+  100%{transform:scale(1);}
 }
 
 /* ===== HOME ESTILO NOVO ===== */
 .home{
-width:95%;
-max-width:500px;
-background:#111;
-padding:35px 25px;
-border-radius:20px;
-text-align:center;
-box-shadow:0 0 40px rgba(0,0,0,0.7);
-animation:fadeInUp 1s ease;
+  width:95%;
+  max-width:500px;
+  background:#111;
+  padding:35px 25px;
+  border-radius:20px;
+  text-align:center;
+  box-shadow:0 0 40px rgba(0,0,0,0.7);
+  animation:fadeInUp 1s ease;
 }
 
 .logo{
-font-size:40px;
-font-weight:bold;
-color:#ff0000;
-margin-bottom:15px;
-animation:pulseTitle 2s infinite;
+  font-size:40px;
+  font-weight:bold;
+  color:#ff0000;
+  margin-bottom:15px;
+  animation:pulseTitle 2s infinite;
 }
 
 .sub{
-color:#00ff88;
-font-size:20px;
-margin-bottom:20px;
-font-weight:bold;
+  color:#00ff88;
+  font-size:20px;
+  margin-bottom:20px;
+  font-weight:bold;
 }
 
 .home p{
-font-size:15px;
-color:#ccc;
-line-height:1.6;
-margin-bottom:25px;
+  font-size:15px;
+  color:#ccc;
+  line-height:1.6;
+  margin-bottom:25px;
 }
 
 .btn{
-width:100%;
-padding:16px;
-background:#ff0000;
-color:white;
-border:none;
-border-radius:15px;
-font-size:16px;
-cursor:pointer;
-margin-bottom:20px;
-transition:0.3s;
+  width:100%;
+  padding:16px;
+  background:#ff0000;
+  color:white;
+  border:none;
+  border-radius:15px;
+  font-size:16px;
+  cursor:pointer;
+  margin-bottom:20px;
+  transition:0.3s;
 }
 
 .btn:hover{
-background:#cc0000;
-transform:scale(1.03);
+  background:#cc0000;
+  transform:scale(1.03);
 }
 
 .global-online{
-color:#00ff88;
-font-size:15px;
-margin-top:10px;
+  color:#00ff88;
+  font-size:15px;
+  margin-top:10px;
 }
 
 .creator{
-margin-top:25px;
-font-size:12px;
-color:#888;
+  margin-top:25px;
+  font-size:12px;
+  color:#888;
 }
 
 .creator a{
-color:#ff0000;
-text-decoration:none;
+  color:#ff0000;
+  text-decoration:none;
 }
 
 /* ===== LOGIN E SALA ===== */
 .hidden{display:none;}
 
 .login, .card{
-width:95%;
-max-width:600px;
-background:#181818;
-padding:25px;
-border-radius:16px;
-text-align:center;
-box-shadow:0 0 25px rgba(0,0,0,0.6);
+  width:95%;
+  max-width:600px;
+  background:#181818;
+  padding:25px;
+  border-radius:16px;
+  text-align:center;
+  box-shadow:0 0 25px rgba(0,0,0,0.6);
 }
 
 input{
-width:100%;
-padding:14px;
-border:none;
-border-radius:10px;
-background:#2a2a2a;
-color:white;
-font-size:14px;
-margin-bottom:12px;
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:10px;
+  background:#2a2a2a;
+  color:white;
+  font-size:14px;
+  margin-bottom:12px;
 }
 
 .btn-secondary{
-background:#333;
+  background:#333;
 }
 
 .video-box{
-width:100%;
-background:#d9d9d9;
-border-radius:12px;
-overflow:hidden;
-position:relative;
-margin-bottom:20px;
+  width:100%;
+  background:#d9d9d9;
+  border-radius:12px;
+  overflow:hidden;
+  position:relative;
+  margin-bottom:20px;
 }
 
 .video-wrapper{
-position:relative;
-width:100%;
-padding-top:56.25%;
+  position:relative;
+  width:100%;
+  padding-top:56.25%;
 }
 
 .video-wrapper iframe,
 .video-wrapper video{
-position:absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
-border:none;
-object-fit:cover;
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  border:none;
+  object-fit:cover;
 }
 
 .chat{
-background:#111;
-border-radius:12px;
-padding:15px;
-max-height:280px;
-display:flex;
-flex-direction:column;
-margin-bottom:15px;
+  background:#111;
+  border-radius:12px;
+  padding:15px;
+  max-height:280px;
+  display:flex;
+  flex-direction:column;
+  margin-bottom:15px;
 }
 
 #chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
 
 .msg{
-background:#222;
-padding:8px 12px;
-border-radius:8px;
-margin-bottom:8px;
-font-size:13px;
-word-break:break-word;
+  background:#222;
+  padding:8px 12px;
+  border-radius:8px;
+  margin-bottom:8px;
+  font-size:13px;
+  word-break:break-word;
 }
 
 .msg strong{color:#e50914;}
 
 .btn-sair{
-width:100%;
-padding:12px;
-background:#444;
-color:white;
-border:none;
-border-radius:10px;
-font-size:14px;
-cursor:pointer;
+  width:100%;
+  padding:12px;
+  background:#444;
+  color:white;
+  border:none;
+  border-radius:10px;
+  font-size:14px;
+  cursor:pointer;
+}
+
+.play-pause-btn{
+  width:48%;
+  padding:12px;
+  background:#ff0000;
+  color:white;
+  border:none;
+  border-radius:15px;
+  font-size:16px;
+  cursor:pointer;
+  margin-top:10px;
+}
+
+.play-pause-btn:hover{
+  background:#cc0000;
 }
 
 </style>
@@ -195,73 +211,78 @@ cursor:pointer;
 <!-- HOME -->
 <div class="home" id="homeBox">
 
-<div class="logo">LOVEZIN</div>
+  <div class="logo">LOVEZIN</div>
 
-<div class="sub">Como funciona?</div>
+  <div class="sub">Como funciona?</div>
 
-<p>
-🎬 Entre em um mundo de vídeos privados juntos!💞<br><br>
-🔐 Crie ou entre em uma sala usando uma senha.<br>
-Só quem souber entra!
-</p>
+  <p>
+    🎬 Entre em um mundo de vídeos privados juntos!💞<br><br>
+    🔐 Crie ou entre em uma sala usando uma senha.<br>
+    Só quem souber entra!
+  </p>
 
-<button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
+  <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
 
-<div class="global-online" id="totalOnlineGlobal">
-Usuários no site: 0
-</div>
+  <div class="global-online" id="totalOnlineGlobal">
+    Usuários no site: 0
+  </div>
 
-<div class="creator">
-Criador: <strong>Isac Santos</strong><br>
-Instagram: <a href="https://instagram.com/lovezin.vuh" target="_blank">@lovezin.vuh</a>
-</div>
+  <div class="creator">
+    Criador: <strong>Isac Santos</strong><br>
+    Instagram: <a href="https://instagram.com/lovezin.vuh" target="_blank">@lovezin.vuh</a>
+  </div>
 
 </div>
 
 <!-- LOGIN -->
 <div class="login hidden" id="loginBox">
-<h2>🔐 Entrar na Sala</h2>
-<input type="text" id="nomeUsuario" placeholder="Seu nome">
-<input type="password" id="senhaSala" placeholder="Senha da sala">
-<button class="btn" id="btnEntrar">Entrar</button>
-<button class="btn btn-secondary" onclick="voltarHome()">Voltar</button>
+  <h2>🔐 Entrar na Sala</h2>
+  <input type="text" id="nomeUsuario" placeholder="Seu nome">
+  <input type="password" id="senhaSala" placeholder="Senha da sala">
+  <button class="btn" id="btnEntrar">Entrar</button>
+  <button class="btn btn-secondary" onclick="voltarHome()">Voltar</button>
 </div>
 
 <!-- SALA -->
 <div class="card hidden" id="salaBox">
-<h1>🎬 Sala Privada</h1>
-<div class="online" id="onlineInfo">Online na sala: 0</div>
+  <h1>🎬 Sala Privada</h1>
+  <div class="online" id="onlineInfo">Online na sala: 0</div>
 
-<input type="text" id="linkInput" placeholder="Link YouTube ou .mp4">
-<button class="btn" id="btnEnviarVideo">Enviar Vídeo</button>
+  <input type="text" id="linkInput" placeholder="Link YouTube ou .mp4">
+  <button class="btn" id="btnEnviarVideo">Enviar Vídeo</button>
 
-<div class="video-box">
-<div class="video-wrapper" id="videoArea"></div>
-</div>
+  <div class="video-box">
+    <div class="video-wrapper" id="videoArea"></div>
+  </div>
 
-<h3>Chat</h3>
-<div class="chat">
-<div id="chatBox"></div>
-<input type="text" id="chatInput" placeholder="Mensagem">
-<button class="btn" id="btnEnviarMsg">Enviar</button>
-</div>
+  <!-- Botões Play/Pause -->
+  <div class="play-pause-btn" id="btnPlayPause" onclick="togglePlayPause()" style="display:none;">
+    Play/Pause
+  </div>
 
-<button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
+  <h3>Chat</h3>
+  <div class="chat">
+    <div id="chatBox"></div>
+    <input type="text" id="chatInput" placeholder="Mensagem">
+    <button class="btn" id="btnEnviarMsg">Enviar</button>
+  </div>
 
-<div class="creator">
-Criador: <strong>Isac Santos</strong> |
-Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
-</div>
+  <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
+
+  <div class="creator">
+    Criador: <strong>Isac Santos</strong> |
+    Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
+  </div>
 </div>
 
 <audio id="notifSound">
-<source src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg">
+  <source src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg">
 </audio>
 
 <script type="module">
 // Importação do Firebase com a nova configuração do PrivéFlix
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, deleteDoc, arrayUnion, arrayRemove, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, arrayUnion, arrayRemove, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
 // Nova configuração do Firebase para PrivéFlix
 const firebaseConfig = {
@@ -339,8 +360,10 @@ btnEntrar.onclick = async () => {
 
     if(nomeLocal !== donoSala){
       btnEnviarVideo.disabled = true;
+      btnPlayPause.style.display = "none";
     } else {
       btnEnviarVideo.disabled = false;
+      btnPlayPause.style.display = "inline-block";
     }
 
     if(dados.chat && dados.chat.length !== ultimoChat){
