--- a/index.html
+++ b/index.html
@@ -205,6 +205,21 @@
       font-size: 16px;
       color: #ccc;
     }
+
+    .creator-info{
+      margin-top: 20px;
+      font-size: 14px;
+      color: #ccc;
+    }
+
+    .creator-info a{
+      color: #00ff88;
+      text-decoration: none;
+    }
+
+    .creator-info a:hover{
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -221,6 +236,12 @@
   <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
   <div class="global-online" id="totalOnlineGlobal">
     Usuários no site: 0
+  </div>
+
+  <!-- Informações do Criador -->
+  <div class="creator-info">
+    Criado por <strong>Isac Santos</strong><br>
+    Instagram: <a href="https://www.instagram.com/lovezin.vuh/" target="_blank">@lovezin.vuh</a>
   </div>
 </div>
 
