--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     }
 
     .creator-info a{
-      color: #00ff88;
+      color: #800080; /* Cor roxa */
       text-decoration: none;
     }
 
