--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
       margin-bottom: 20px;
     }
 
-    /* Estilo para a coroa antes do nome */
     .header-sala .nome-com-coroa{
       font-size: 28px;
       display: flex;
@@ -236,6 +235,14 @@
   <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
   <div class="global-online" id="totalOnlineGlobal">
     Usuários no site: 0
+  </div>
+
+  <!-- Vídeo na tela inicial -->
+  <div class="video-box">
+    <div class="video-wrapper" id="videoArea">
+      <!-- Exibindo o vídeo do YouTube diretamente aqui -->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/sX5R9yC27Bk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   </div>
 
   <!-- Informações do Criador -->
