--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
       margin-bottom: 20px;
     }
 
+    /* Estilo para a coroa antes do nome */
     .header-sala .nome-com-coroa{
       font-size: 28px;
       display: flex;
@@ -236,7 +237,7 @@
   <div class="global-online" id="totalOnlineGlobal">
     Usuários no site: 0
   </div>
-
+  
   <!-- Vídeo na tela inicial -->
   <div class="video-box">
     <div class="video-wrapper" id="videoArea">
